# audiowarden

./: .editorconfig  Cargo.toml  LICENSE  README.md  clippy.toml
.github/: ci.yml
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  main.rs  model.rs  mpris.rs
src/file_io/: cache.rs  mod.rs  model.rs  state.rs
src/http/: mod.rs  server.rs
src/http/spotify/: client.rs  model.rs
src/http/spotify/test_artefacts/: my_playlist.json  playlist_with_local_track.json  playlist_with_podcast.json  playlists_simplified.json
src/messaging/: mod.rs  socket.rs
