[package]
name = "audiowarden"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
dbus = "0.9.7"
env_logger = "0.10.0"
flate2 = "1.0.28"
log = "0.4.20"
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
sha2 = "0.10.8"
ureq = { version = "2.8.0", features = ["json"] }
url = "2.4.1"
